2004-05-25  Mike Kestner  <mkestner@ximian.com>

	* configure.in : don't expand the GAPI Makefile.
	* parser/Makefile.am : remove SUBDIRS.
	* parser/gapi2xml.pl : remove GAPI::Metadata usage.
	* parser/GAPI/* : kill. long live gapi-fixup.

2004-05-25  Mike Kestner  <mkestner@ximian.com>

	* gtk/Container.custom : use glue to invoke the GtkCallback in
	Forall.
	* gtk/glue/container.c : add gtksharp_container_invoke_gtk_callback.

2004-05-23  Mike Kestner  <mkestner@ximian.com>

	* generator/SignalHandler.cs : put back the ObjectGen hack
	for param wrapping.  [Fixes #58876]

2004-05-22  Mike Kestner  <mkestner@ximian.com>

	* configure.in : require mono-0.91.99.  Sorry, but we need to
	require mono cvs until beta2 because of some recent breakage in 
	Gnome.Program custom code while reflecting against the runtime.

2004-05-22  Todd Berman  <tberman@sevenl.net>

	* gnome/Program.custom: Change the Mono.Runtime stuff to reflect
	its new internal nature. This fixes MD, gnunit, and all gnome#
	programs that were blowing up for no reason.

2004-05-22  Radek Doulik  <rodo@ximian.com>

	* gtk/TreeView.custom(GetPathAtPos): change Gtk.TreeViewColumn
	column parameter to out[put] as gtk_tree_view_get_path_at_pos
	returns column address to column parameter
	(GetPathAtPos): use GLib.Object.GetObject so that we don't create
	new TreeViewColumn object duplicates

2004-05-19  Mike Kestner  <mkestner@ximian.com>

	* gtk/Container.custom : add CallbackInvoke and use it in OnForall.

2004-05-19  Mike Kestner  <mkestner@ximian.com>

	* generator/Makefile.am : add TimeTGen.cs 
	* generator/SymbolTable.cs : use new TimeTGen.
	* generator/StringGen.cs : s/GLibSharp/GLib
	* generator/TimeTGen.cs : generatable to marshal time_t.
	* glib/time_t_CustomMarshaler.cs : kill
	* glib/Makefile.am : remove time_t_CustomMarshaler.cs
	* glib/Markup.cs : s/GLibSharp/GLib
	* glib/Marshaller.cs : move to GLib namespace. Add methods to
	marshal time_t to and from DateTime.
	* glib/glue/time_t.c : kill