@@ -1,5 +1,9 @@
 2004-05-25  Mike Kestner  <mkestner@ximian.com>
 
+	* */Makefile.am : rm generated/* in generated-stamp target.
+
+2004-05-25  Mike Kestner  <mkestner@ximian.com>
+
 	* configure.in : don't expand the GAPI Makefile.
 	* parser/Makefile.am : remove SUBDIRS.
 	* parser/gapi2xml.pl : remove GAPI::Metadata usage.
